--- a/package.json
+++ b/package.json
@@ -55,20 +55,20 @@
     "@arethetypeswrong/cli": "0.18.2",
     "@changesets/cli": "2.29.8",
     "@swc/core": "1.15.8",
-    "@types/node": "25.0.5",
-    "@vitest/coverage-v8": "4.0.16",
+    "@types/node": "25.0.9",
+    "@vitest/coverage-v8": "4.0.17",
     "barro": "1.2.8",
     "esbuild": "0.27.2",
     "globals": "17.0.0",
-    "happy-dom": "20.1.0",
-    "oxlint": "1.38.0",
+    "happy-dom": "20.3.1",
+    "oxlint": "1.39.0",
     "pnpm": "10.28.0",
-    "prettier": "3.7.4",
+    "prettier": "3.8.0",
     "rimraf": "6.1.2",
-    "tsdown": "0.19.0",
+    "tsdown": "0.20.0-beta.3",
     "typescript": "5.9.3",
     "vite": "7.3.1",
-    "vitest": "4.0.16"
+    "vitest": "4.0.17"
   },
   "packageManager": "pnpm@10.28.0",
   "pnpm": {
