--- a/package.json
+++ b/package.json
@@ -51,20 +51,20 @@
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "0.18.2",
-    "@biomejs/biome": "2.3.11",
+    "@biomejs/biome": "2.3.12",
     "@changesets/cli": "2.29.8",
-    "@swc/core": "1.15.8",
-    "@types/node": "25.0.9",
-    "@vitest/coverage-v8": "4.0.17",
+    "@swc/core": "1.15.10",
+    "@types/node": "25.0.10",
+    "@vitest/coverage-v8": "4.0.18",
     "barro": "1.2.8",
-    "globals": "17.0.0",
-    "happy-dom": "20.3.1",
-    "pnpm": "10.28.0",
+    "globals": "17.1.0",
+    "happy-dom": "20.3.7",
+    "pnpm": "10.28.1",
     "rimraf": "6.1.2",
-    "tsdown": "0.20.0-beta.3",
+    "tsdown": "0.20.1",
     "typescript": "5.9.3",
     "vite": "7.3.1",
-    "vitest": "4.0.17"
+    "vitest": "4.0.18"
   },
   "packageManager": "pnpm@10.28.0",
   "pnpm": {
